# livevtt

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEMO.md  Dockerfile  H100_SETUP.md  LICENSE  LiveVTTCaptionHTTPProvider.java  LiveVTTCaptionModule.java  README.md  TESTING.md  WOWZA_SETUP.md  build.sh  caption_sender  caption_sender.py  check_progress.py  check_wowza.py  custom_vocab.json  filter.json  h100_requirements.txt  h100_server.py  java_module_build.sh  main.py  mock_wowza.py  nohup.out  plan.md  publish_test_stream.py  pyproject.toml  requirements.txt  start_transcriber.sh  stream_checker  stream_index.txt  test_caption.py  test_caption_generator.py  test_final_integration.py  test_integration  test_integration.py  (+4 more)
.github/workflows/: ci.yml  translation-tools.yml
PublishOnTextData/: README.html  style.css  url.txt  version.txt
PublishOnTextData/content/: ontextdata.txt
PublishOnTextData/src/: ModulePublishOnTextData.java
config/: filter.json  vocabulary.json
config/examples/: Application.xml.example  VHost.xml.example
deploy/: .dockerignore  Dockerfile  archive-transcriber.service  docker-compose.yml
deploy/scripts/: java_module_build.sh
docs/: API.md  CLOUD_GPU_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  TESTING.md  TOOLS.md  WOWZA_SETUP.md
examples/: README.md  compare_translations.py  sample.en.vtt  sample.ru.vtt  sample.ttml  test_nllb_translation.py
scripts/: find_broken_smils.py  run_archive_transcriber.sh
src/: __init__.py
src/java/: LiveVTTCaptionHTTPProvider.java  LiveVTTCaptionModule.java
src/python/: __init__.py
src/python/services/: __init__.py  subtitle_autogen.py
src/python/tools/: __init__.py  archive_transcriber.py  archive_transcriber_remote.py  archive_transcriber_serverless.py  caption_sender.py  libretranslate_vtt_translator.py  mistral_vtt_translator.py  nllb_vtt_translator.py  openai_vtt_translator.py  remote_whisper_server.py  stream_checker.py  test_final_integration.py  ttml_utils.py  vtt_to_ttml.py
src/python/utils/: __init__.py  check_wowza.py  mock_wowza.py  publish_test_stream.py
tests/: README.md  __init__.py  run_all_tests.py  test_archive_transcriber.py  test_caption_sender.py  test_smil_generation.py  test_stream_checker.py  test_subtitle_autogen.py  test_ttml_simple.py  test_ttml_utils.py  test_vtt_to_ttml_cli.py
