[project]
name = "livevtt"
version = "0.1.0"
description = "Live and archived subtitle generation system with WebVTT and TTML support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper",
    "m3u8",
    "aiohttp[speedups]",
    "numpy>=1.26,<2.0",
    "aiofiles",
    "hf_xet",
    "tqdm",
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "websockets",
    "torch",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.4.0",
    "ruff>=0.8.0",
    "types-requests>=2.32.0.20241016",
]

[project.scripts]
archive_transcriber = "python.tools.archive_transcriber:main"
vtt_to_ttml = "python.tools.vtt_to_ttml:main"
caption_sender = "python.tools.caption_sender:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
# Note: To enable coverage reporting, install pytest-cov and add:
# --cov=src/python --cov-report=term-missing

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
